# RealTime-Agent-LiveKit

./: .gitignore  .replit  GEMINI_CRITICAL_MCP_ANALYSIS_PROMPT.md  GEMINI_MCP_RESEARCH_PROMPT.md  LIVEKIT_MCP_IMPLEMENTATION_ANALYSIS.md  LIVEKIT_REALTIME_API_GUIDE.md  MCP_EXPERT_CONSULTATION.md  MCP_POLLING_IMPLEMENTATION_SUMMARY.md  README.md  agent.py  agent_enhanced.py  agent_enhanced_polling.py  agent_final.py  agent_fixed.py  agent_native_mcp.py  agent_old.py  agent_realtime_working.py  agent_universal.py  agent_working_mcp.py  demo_mcp_polling_solution.py  lessons.md  package-lock.json  package.json  pyproject.toml  replit.md  test_agent.py  test_complete_mcp_integration.py  test_complete_universal_mcp.py  test_job_polling_mcp.py  test_n8n_mcp_integration.py  test_realtime_access.py  vite.config.ts  working_mcp_demo.py
agents/: n8n_tool.py  realtime_agent.cjs  realtime_agent.py  simple_agent.py  simple_voice_agent.js  start_agent.py  test_direct_tools.py  voice_agent.js  voice_agent.py  voice_agent_direct_tools.py  voice_agent_mcp.py  voice_agent_realtime.py  voice_agent_realtime_improved.py  voice_agent_reliable.py  voice_agent_webhook.py  web_agent.py  zapier_tool.py
archive/: final_mcp_demonstration.py
archived_agents/: README.md  agent_corrected.py  agent_dynamic_mcp.py  agent_enhanced.py  agent_mcp_native.py  agent_multimodal.py  agent_universal_simple.py  agent_working_mcp.py  test_enhanced_mcp_integration.py  test_mcp_enhanced_automated.py  test_universal_mcp.py  test_voice_agent_mcp.py
archived_documentation/: EXPERT_CONSULTATION.md  README.md  (+6 more)
(+143 files in other folders)
